--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -498,7 +498,23 @@
       </td>
     </tr>
 
-    
+    <tr>
+      <td class="pub_td1"><img src="./files/demo_6.gif" class="papericon" width="300"></td>
+      <td class="pub_td2">
+        <b>Human motion detection and direction recognition</b>
+        <br>
+        <br>The human motion detection system accurately tracks indoor movement directions with a range up 
+        to 6.93m in open spaces, 6.54m through a 4.5cm wooden door, and 5.1m through a 17cm hollow wall, 
+        achieving 99% accuracy. It detects movement directions up to 4m in open spaces, 3.5m through a wooden 
+        door, and 2.5m through a hollow wall with at least 85% accuracy. Applications include security, 
+        military, gaming, and elderly care monitoring.
+        <br>
+        <ul>
+          <li class="line-height-10">Full demo:<A href="https://youtu.be/B1Kx6uATRf8"> https://youtu.be/B1Kx6uATRf8</A>;</li>
+        </ul>
+      </td>
+    </tr>
+
   </table>
 
 
