--- a/index.html
+++ b/index.html
@@ -43,6 +43,26 @@
           width: 30%;
       }
   </style>
+  <style>
+    table.pub_table,td.pub_td1,td.pub_td2
+  {
+  padding: 8px;
+  /* width: 860px; */
+      border-collapse: separate;
+      border-spacing: 15px;
+      margin-top: -5px;
+  }
+  td.pub_td1
+  {
+  width:50px;
+  }
+  td.pub_td1 img
+  {
+    /*height:120px;*/
+    width: 250px;
+  }
+  </style>
+  
 </HEAD>
 
 
@@ -180,6 +200,181 @@
   <p class="line-height-13">M.S. in Computer Software and Theory supervised by Prof. Ning Ye</p>
 
   <H2>PUBLICATIONS</H2>
+  <table class="pub_table">
+    <tr>
+      <td class="pub_td1"><img src="./PaperFig/1.png" class="papericon" width="300"></td>
+      <td class="pub_td2">
+        <b>[1]Single-Target Real-Time Passive WiFi Tracking</b>
+        <br>
+        <br>In this work, we present a scheme named WiFi Doppler Frequency Shift (WiDFS),
+         which can achieve single-target real-time passive tracking using channel state 
+         information (CSI) collected from commercial-off-the-shelf (COTS) WiFi devices. 
+         We consider the typical system setup including a transmitter with a single antenna and a receiver with three antennas.
+        <br>
+        <ul>
+          <li class="line-height-10">Demo:<A href="https://www.youtube.com/watch?v=UvceJ2OnJmE&t=73s"> https://www.youtube.com/watch?v=UvceJ2OnJmE&t=73s</A>;</li>
+        </ul>
+      </td>
+    </tr>
+
+    <tr>
+      <td class="pub_td1"><img src="./PaperFig/2.png" class="papericon" width="300"></td>
+      <td class="pub_td2">
+        <b>[2]Development of an Uplink Sensing Demonstrator for Perceptive Mobile Networks</b>
+        <br>
+        <br>This paper introduces the development of a real-time uplink sensing demonstrator for PMN, 
+        enabling sub-meter precision tracking in indoor environments. 
+        <br>
+      </td>
+    </tr>
+
+    <tr>
+      <td class="pub_td1"><img src="./PaperFig/3.png" class="papericon" width="300"></td>
+      <td class="pub_td2">
+        <b>[3]Vital Sign Monitoring in Dynamic Environment via mmWave Radar and Camera Fusion</b>
+        <br>
+        <br>In this paper, we propose a robust mmWave radar and camera fusion system for 
+        monitoring vital signs, which can perform consistently well in dynamic scenarios, 
+        e.g., when some people move around the subject to be tracked, or a subject waves his/her arms and marches on the spot. 
+        <br>
+      </td>
+    </tr>
+
+    <tr>
+      <td class="pub_td1"><img src="./PaperFig/4.png" class="papericon" width="300"></td>
+      <td class="pub_td2">
+        <b>[4]Accurate AoA Estimation for RFID Tag Array with Mutual Coupling</b>
+        <br>
+        <br>In this article, we propose a scheme called RF-Mirror that can resolve the mutual coupling and phase jump 
+        problems and achieve accurate AoA estimation for an array with two or more tags.  First, we characterize the 
+        impact of mutual coupling on a tag’s signal fingerprint and develop novel RSSI/phase-distance models.  We then 
+        develop new experimental methods and signal processing techniques to verify the effectiveness of the proposed models. 
+        <br>
+      </td>
+    </tr>
+
+    <tr>
+      <td class="pub_td1"><img src="./PaperFig/5.png" class="papericon" width="300"></td>
+      <td class="pub_td2">
+        <b>[5]Computer Vision-assisted 3D Object Localization via COTS RFID Devices and a Monocular Camera</b>
+        <br>
+        <br>In this article, we present RF-MVO that fuses RFID and computer vision for stationary RFID localization 
+        in 3D space by attaching a light-weight 2D monocular camera to two reader antennas in parallel.
+        <br>
+      </td>
+    </tr>
+
+    <tr>
+      <td class="pub_td1"><img src="./PaperFig/6.png" class="papericon" width="300"></td>
+      <td class="pub_td2">
+        <b>[6]Recognizing 3D Orientation of a Two-RFID-Tag Labeled Object in Multipath Environments Using Deep Transfer Learning</b>
+        <br>
+        <br> In this paper, we propose RF-Orien3D that minimizes these interferences for accurate 3D orientation 
+        recognition only using two RFID tags. The electromagnet interference modifies the radiation pattern and 
+        modulation factor of each tag in the two-element tag array, which can be estimated to compensate for the 
+        distortion in RFID fingerprints.
+        <br>
+      </td>
+    </tr>
+
+    <tr>
+      <td class="pub_td1"><img src="./PaperFig/7.png" class="papericon" width="300"></td>
+      <td class="pub_td2">
+        <b>[7]RF-Mirror: Mitigating Mutual Coupling Interference in Two-Tag Array Labeled RFID Systems</b>
+        <br>
+        <br> In this paper, we present RF-Mirror that enables compensating the distortion in a two-tag array 
+        labeled RFID system. The system would output the accurate difference in tag-to-antenna distances between 
+        two tags, which is a fundamental parameter in previous works for use.
+        <br>
+      </td>
+    </tr>
+
+
+    <tr>
+      <td class="pub_td1"><img src="./PaperFig/8.png" class="papericon" width="300"></td>
+      <td class="pub_td2">
+        <b>[8] RF-Focus: Computer Vision-assisted Region-of-interest RFID Tag Recognition and Localization in Multipath-prevalent Environments</b>
+        <br>
+        <br> In this paper, we propose a comprehensive solution, called RF-Focus, which fuses RFID and computer vision (CV) 
+        techniques to recognize and locate moving RFID-tagged objects within ROI. 
+        <br>
+      </td>
+    </tr>
+
+    <tr>
+      <td class="pub_td1"><img src="./PaperFig/9.png" class="papericon" width="300"></td>
+      <td class="pub_td2">
+        <b>[9]RF-MVO: Simultaneous 3D Object Localization and Camera Trajectory Recovery Using RFID Devices and a 2D Monocular Camera</b>
+        <br>
+        <br>this paper presents RF-MVO, which fuses battery-free RFID and monocular visual odometry to locate stationary 
+        RFID tags in a 3D space and recover an unknown trajectory of reader antennas binding with a 2D monocular camera. 
+        The proposed hybrid system exhibits three unique features.
+        <br>
+      </td>
+    </tr>
+
+    <tr>
+      <td class="pub_td1"><img src="./PaperFig/10.png" class="papericon" width="300"></td>
+      <td class="pub_td2">
+        <b>[10]A See-Through-wall System for Device-free Human Motion Sensing Based on Battery-free RFID</b>
+        <br>
+        <br>Recently, a low-cost RFID technology has gained a lot of attention in this field. 
+        Since phase estimates of a battery-free RFID tag collected by a commercial off-the-shelf (COTS) RFID reader 
+        are sensitive to external interference, the RFID tag could be regarded as a battery-free sensor that detects 
+        reflections off targeted objects. 
+        <br>
+      </td>
+    </tr>
+
+    <tr>
+      <td class="pub_td1"><img src="./PaperFig/11.png" class="papericon" width="300"></td>
+      <td class="pub_td2">
+        <b>[11]One More Tag Enables Fine-Grained RFID Localization and Tracking</b>
+        <br>
+        <br>In this paper, we propose a comprehensive localization and tracking scheme by attaching two RFID tags to one 
+        object. Instead of using per-tag localization pattern, adding one-more RFID tag to the object exhibits several 
+        benefits: 1) providing rich freedom in RFID reader's antenna spacing and placement; 2) supporting accurate 
+        calibration of the reader's antenna location and spacing, and 3) enabling fine-grained calculation on the 
+        orientation of the tags. All of these advantages ultimately improve the localization/tracking accuracy. 
+        <br>
+      </td>
+    </tr>
+    
+    <tr>
+      <td class="pub_td1"><img src="./PaperFig/12.png" class="papericon" width="300"></td>
+      <td class="pub_td2">
+        <b>[12]TrackT: Accurate Tracking of RFID Tags with mm-level Accuracy Using First-order Taylor Series Approximation</b>
+        <br>
+        <br>In this work, we propose a method based on measured phase to track mobile RFID tags with millimeter level 
+        (mm-level) accuracy. We first partition the surveillance region into square grids at mm-level and suppose that 
+        there is a virtual tag as the same as the tracked one in each grid. On this basis, for the case where the tags 
+        move along a known track with constant speed, we only need to locate the tag's initial position. 
+        <br>
+        <ul>
+          <li class="line-height-10">Demo:<A href="https://www.youtube.com/watch?v=iz98y3m6A64"> https://www.youtube.com/watch?v=iz98y3m6A64</A>;</li>
+        </ul>
+      </td>
+    </tr>
+
+    <tr>
+      <td class="pub_td1"><img src="./PaperFig/13.png" class="papericon" width="300"></td>
+      <td class="pub_td2">
+        <b>[13]TMicroscope: Behavior Perception Based on the Slightest RFID Tag Motion</b>
+        <br>
+        <br>In this paper, we propose a RFID-based method to perceive slight motion of a target product with RFID 
+        tag for mining customer’s behaviors.   We first compute virtual displacements of the target RFID tag and 
+        then adopt Support Vector Machines to recognize absence or presence of human motion near the tag. 
+        Next, we divide the surveillance region into mm-level grids to construct similarity matrixes of the 
+        tracked tag before and after human motion, which can accurately distinguish absence or presence of tag motion.
+        <br>
+        <ul>
+          <li class="line-height-10">Demo:<A href="https://www.youtube.com/watch?v=a2M32Vg66Kc"> https://www.youtube.com/watch?v=a2M32Vg66Kc</A>;</li>
+        </ul>
+      </td>
+    </tr>
+
+
+  <!--</table>
   <p>[1] <b>Zhongqin Wang</b>, J. Andrew Zhang, Min Xu and Y. Jay Guo. Single-Target 
     Real-Time Passive WiFi Tracking, <i>IEEE Transactions on Mobile Computing</i>, vol.22, 
     no. 6, pp. 3724-3742, 2023. <i>(CORE A*, JCR Q1, IF: 6.075)</i></p>
@@ -227,6 +422,101 @@
      TMicroscope: Behavior Perception Based on the Slightest RFID Tag Motion. 
      <i>Elektronika ir Elektrotechnika</i>, vol. 22, no. 2, pp.114-122, 2016. 
      <i>(JCR Q3, IF: 1.059)</i></p>
+  -->
+  </table>
+  <H2>DEMO</H2>
+  <table class="pub_table">
+    <tr>
+      <td class="pub_td1"><img src="./files/demo_1.gif" class="papericon" width="300"></td>
+      <td class="pub_td2">
+        <b>mmWave Radar Sensing</b>
+        <br>
+        <br>The system detects environmental states, counts 2-3 people with 96.1% accuracy in a 25m² room, tracks 
+        moving targets' positions and speeds, estimates breathing and heart rates of static targets, and detects falls 
+        with timely alerts.  It ensures real-time performance by completing computations within each sampling interval.
+        <ul>
+          <li class="line-height-10">Full demo:<A href="https://youtu.be/7ni5InGPi1A"> https://youtu.be/7ni5InGPi1A</A>;</li>
+        </ul>
+      </td>
+    </tr>
+
+    <tr>
+      <td class="pub_td1"><img src="./files/demo_2.gif" class="papericon" width="300"></td>
+      <td class="pub_td2">
+        <b>Head Pose Estimation via mmWave Radar</b>
+        <br>
+        <br>In this study, we introduce mmHead, a novel human head 
+        posture estimation system using mmWave radar technology. In
+        the initial phase, we utilized FFT and static interference removal
+        techniques to extract head pose features, aiming to mitigate
+        environmental noise and user variations. 
+        <br>
+        <ul>
+          <li class="line-height-10">Full demo:<A href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;</li>
+        </ul>
+      </td>
+    </tr>
+
+    <tr>
+      <td class="pub_td1"><img src="./files/demo_3.gif" class="papericon" width="300"></td>
+      <td class="pub_td2">
+        <b>Single-Target Real-Time Passive WiFi Tracking</b>
+        <br>
+        <br>We present WiFi Doppler Frequency Shift (WiDFS), a scheme for real-time passive single-target 
+        tracking using CSI from commercial WiFi devices. The system setup includes a single-antenna transmitter 
+        and a three-antenna receiver.
+        <br>
+        <ul>
+          <li class="line-height-10">Full demo:<A href="https://www.youtube.com/watch?v=UvceJ2OnJmE&t=73s"> https://www.youtube.com/watch?v=UvceJ2OnJmE&t=73s</A>;</li>
+        </ul>
+      </td>
+    </tr>
+
+    <tr>
+      <td class="pub_td1"><img src="./files/demo_4.gif" class="papericon" width="300"></td>
+      <td class="pub_td2">
+        <b>High sensitivity RFID security sensing system</b>
+        <br>
+        <br>Detect whether objects with RFID tags are moved in the monitoring area with human activities.
+        <br>
+        <ul>
+          <li class="line-height-10">Full demo:<A href="https://www.youtube.com/watch?v=a2M32Vg66Kc"> https://www.youtube.com/watch?v=a2M32Vg66Kc</A>;</li>
+        </ul>
+      </td>
+    </tr>
+
+    <tr>
+      <td class="pub_td1"><img src="./files/demo_5.gif" class="papericon" width="300"></td>
+      <td class="pub_td2">
+        <b>Active target location based on passive RFID</b>
+        <br>
+        <br>The PDoA phase difference is used to realize the track tracking of passive RFID tags.
+        <br>
+        <ul>
+          <li class="line-height-10">Full demo:<A href="https://www.youtube.com/watch?v=iz98y3m6A64"> https://www.youtube.com/watch?v=iz98y3m6A64</A>;</li>
+        </ul>
+      </td>
+    </tr>
+
+    <tr>
+      <td class="pub_td1"><img src="./files/demo_6.gif" class="papericon" width="300"></td>
+      <td class="pub_td2">
+        <b>Human motion detection and direction recognition</b>
+        <br>
+        <br>The human motion detection system accurately tracks indoor movement directions with a range up 
+        to 6.93m in open spaces, 6.54m through a 4.5cm wooden door, and 5.1m through a 17cm hollow wall, 
+        achieving 99% accuracy. It detects movement directions up to 4m in open spaces, 3.5m through a wooden 
+        door, and 2.5m through a hollow wall with at least 85% accuracy. Applications include security, 
+        military, gaming, and elderly care monitoring.
+        <br>
+        <ul>
+          <li class="line-height-10">Full demo:<A href="https://youtu.be/B1Kx6uATRf8"> https://youtu.be/B1Kx6uATRf8</A>;</li>
+        </ul>
+      </td>
+    </tr>
+
+  </table>
+
 
   <H2>PROFESSIONAL SERVICES</H2>
   <ul>
@@ -260,7 +550,8 @@
       <li class="line-height-5">C#</li>
       <li class="line-height-5">C/C++</li>
       <li class="line-height-5">Linux</li>
-    </ul>
+  </ul>
+
 
 </BODY>
 </HTML>
