--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   <ul>
     <li class="line-height-5">Developed an elderly healthcare system using commercial 
       off-the-shelf millimeter-wave devices</li>
-    <li class="line-height-15">Led the development of key functionalities, including 
+    <li >Led the development of key functionalities, including 
       moving object tracking, vital signs estimation, fall detection, stationary object localization, and people counting</li>
     <li class="line-height-5">Designed low-computational cutting-edge algorithms 
       to enhance the real-time performance of the system</li>
