--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
     width: 250px;
   }
   </style>
-  <style>ul,li{ list-style:none}
+  <style>
+  ul,li{ list-style:none}
   </style>
   
 </HEAD>
