--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
     .line-height-14 {line-height: 1.4;}
     .line-height-15 {line-height: 1.5;}
     .line-height-20 {line-height: 2;}
-    .line-height-150 {line-height: 150%;}
   </style>
   <title>一半左对齐一半右对齐</title>
   <style>
@@ -63,7 +62,9 @@
     width: 250px;
   }
   </style>
-  
+  <style>
+  ul li{ float:left;height:22px;} 
+  </style>
 </HEAD>
 
 
@@ -139,7 +140,7 @@
   <ul>
     <li class="line-height-5">Developed an elderly healthcare system using commercial 
       off-the-shelf millimeter-wave devices</li>
-    <li class="line-height-150">Led the development of key functionalities, including 
+    <li class="line-height-5">Led the development of key functionalities, including 
       moving object tracking, vital signs estimation, fall detection, stationary object localization, and people counting</li>
     <li class="line-height-5">Designed low-computational cutting-edge algorithms 
       to enhance the real-time performance of the system</li>
