--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
   </div>
   <p class="line-height-15"><i>Research Associate supervised by Prof. Min Xu</i></p>
   <ul>
-    <li class="line-height-5">Developed an elderly healthcare system using commercial 
+    <li>Developed an elderly healthcare system using commercial 
       off-the-shelf millimeter-wave devices</li>
     <li>Led the development of key functionalities, including 
       moving object tracking, vital signs estimation, fall detection, stationary object localization, and people counting</li>
-    <li class="line-height-5">Designed low-computational cutting-edge algorithms 
+    <li>Designed low-computational cutting-edge algorithms 
       to enhance the real-time performance of the system</li>
-    <li class="line-height-5">Provided valuable mentorship and guidance to Ph.D. 
+    <li>Provided valuable mentorship and guidance to Ph.D. 
       students</li>
   </ul>
 
