--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
   </P>
 
   <ul>
-    <li class="line-height-10">Wireless Sensing and Communication</li>
-    <li class="line-height-10">Contactless Healthcare and Eldercare</li>
+    <li>Wireless Sensing and Communication</li>
+    <li>Contactless Healthcare and Eldercare</li>
     <li class="line-height-10">Radio-Visual Joint Learning and Sensing</li>
     <li class="line-height-10">Contactless Healthcare and Eldercare</li>
   </ul>
@@ -125,9 +125,9 @@
   </div>
   <p class="line-height-15"><i>Lecturer at College of Information and Engineering</i></p>
   <ul>
-    <li class="line-height-5">Researching</li>
-    <li class="line-height-5">Teaching</li>
-    <li class="line-height-5">Master student supervision</li>
+    <li>Researching</li>
+    <li>Teaching</li>
+    <li>Master student supervision</li>
   </ul>
 
   <div class="container">
