--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
   <ul>
     <li>Wireless Sensing and Communication</li>
     <li>Contactless Healthcare and Eldercare</li>
-    <li class="line-height-10">Radio-Visual Joint Learning and Sensing</li>
-    <li class="line-height-10">Contactless Healthcare and Eldercare</li>
+    <li>Radio-Visual Joint Learning and Sensing</li>
+    <li>Contactless Healthcare and Eldercare</li>
   </ul>
 
   <H2>WORK EXPERIENCE</H2>
@@ -113,17 +113,17 @@
     <div class="left"><b>University of Technology Sydney, Australia</b></div>
     <div class="right">Feb. 2024 - Present</div>
   </div>
-  <p class="line-height-15"><i>Research Fellow supervised by Prof. Andrew Zhang</i></p>
+  <p class="line-height-20"><i>Research Fellow supervised by Prof. Andrew Zhang</i></p>
   <ul>
-    <li class="line-height-5">Researching</li>
-    <li class="line-height-5">Master/PhD student supervision</li>
+    <li>Researching</li>
+    <li>Master/PhD student supervision</li>
   </ul>
 
   <div class="container">
     <div class="left"><b>Capital Normal University, Beijing, China</b></div>
     <div class="right">Dec. 2021 - Jan. 2024</div>
   </div>
-  <p class="line-height-15"><i>Lecturer at College of Information and Engineering</i></p>
+  <p class="line-height-20"><i>Lecturer at College of Information and Engineering</i></p>
   <ul>
     <li>Researching</li>
     <li>Teaching</li>
