--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <div class="left"><b>University of Technology Sydney, Australia</b></div>
     <div class="right">Sep. 2021 - Jun. 2022</div>
   </div>
-  <p class="line-height-15"><i>Research Associate supervised by Prof. Min Xu</i></p>
+  <p class="line-height-20"><i>Research Associate supervised by Prof. Min Xu</i></p>
   <ul>
     <li>Developed an elderly healthcare system using commercial 
       off-the-shelf millimeter-wave devices</li>
@@ -150,13 +150,13 @@
     <div class="left"><b>University of Technology Sydney, Australia</b></div>
     <div class="right">Jan. 2021 – Jun. 2021</div>
   </div>
-  <p class="line-height-15"><i>Research Engineer supervised by Prof. Andrew Zhang</i></p>
+  <p class="line-height-20"><i>Research Engineer supervised by Prof. Andrew Zhang</i></p>
   <ul>
-    <li class="line-height-5">Designed a novel device-free WiFi tracking scheme</li>
-    <li class="line-height-5">Implemented a real-time tracking demonstration system
+    <li>Designed a novel device-free WiFi tracking scheme</li>
+    <li>Implemented a real-time tracking demonstration system
       (Demo video available at: 
       <A href="https://youtu.be/oIPGrRmY-uc">https://youtu.be/oIPGrRmY-uc</A>)</li>
-    <li class="line-height-5">Published the research outcome in an A* top journal</li>
+    <li>Published the research outcome in an A* top journal</li>
   </ul>
 
   <div class="container">
