--- a/index.html
+++ b/index.html
@@ -163,10 +163,10 @@
     <div class="left"><b>University of Technology Sydney, Australia</b></div>
     <div class="right">Jul. 2020 – Dec. 2020</div>
   </div>
-  <p class="line-height-15"><i>Research Assistant supervised by Prof. Andrew Zhang</i></p>
+  <p class="line-height-20"><i>Research Assistant supervised by Prof. Andrew Zhang</i></p>
   <ul>
-    <li class="line-height-5">Established a WiFi hardware platform for data collection </li>
-    <li class="line-height-5">Reproduced and evaluated previous research works on 
+    <li>Established a WiFi hardware platform for data collection </li>
+    <li>Reproduced and evaluated previous research works on 
       passive human tracking using WiFi signals</li>
   </ul>
 
