--- a/index.html
+++ b/index.html
@@ -520,36 +520,36 @@
 
   <H2>PROFESSIONAL SERVICES</H2>
   <ul>
-    <li class="line-height-5">TPC Member, Workshop on Integrated Sensing and 
+    <li>TPC Member, Workshop on Integrated Sensing and 
       Communication at IEEE ICC, 2023</li>
-    <li class="line-height-5">Guest Editor, Special Issue "Precise Indoor 
+    <li>Guest Editor, Special Issue "Precise Indoor 
       Positioning and Navigation" of Applied Sciences, 2022</li>
-    <li class="line-height-5">Reviewer, IEEE Journal of Selected Topics in Signal Processing, 2021</li>
-    <li class="line-height-5">Reviewer, IJCAI-PRICAI, 2020</li>
-    <li class="line-height-5">Reviewer, IEEE Access</li>
-    <li class="line-height-5">Reviewer, IET Communications</li>
-    <li class="line-height-5">Reviewer, Measurements</li>
+    <li>Reviewer, IEEE Journal of Selected Topics in Signal Processing, 2021</li>
+    <li>Reviewer, IJCAI-PRICAI, 2020</li>
+    <li>Reviewer, IEEE Access</li>
+    <li>Reviewer, IET Communications</li>
+    <li>Reviewer, Measurements</li>
   </ul>
 
 
   <H2>AWARDS & HONORS</H2>
   <ul>
-    <li class="line-height-5">Winner, The "Chunhui Cup" Chinese Oversea Students Innovation and Entrepreneurship Competition, 2022</li>
-    <li class="line-height-5">UTS President’s Scholarship, 2017</li>
-    <li class="line-height-5">National Scholarship for Doctoral Students, 2017</li>
-    <li class="line-height-15">First Prize, the 2nd National College “3S” (Smart, Service and System) Competition on Internet of Things Technology and Applications, 2016</li>
-    <li class="line-height-5">National Scholarship for Graduate Students, 2013</li>
-    <li class="line-height-5">National Scholarship for Undergraduate Students, 2009</li>
+    <li>Winner, The "Chunhui Cup" Chinese Oversea Students Innovation and Entrepreneurship Competition, 2022</li>
+    <li>UTS President’s Scholarship, 2017</li>
+    <li>National Scholarship for Doctoral Students, 2017</li>
+    <li>First Prize, the 2nd National College “3S” (Smart, Service and System) Competition on Internet of Things Technology and Applications, 2016</li>
+    <li>National Scholarship for Graduate Students, 2013</li>
+    <li>National Scholarship for Undergraduate Students, 2009</li>
   </ul>
 
 
   <H2>PROGRAMMING SKILLS</H2>
   <ul>
-      <li class="line-height-5">MATLAB</li>
-      <li class="line-height-5">Python</li>
-      <li class="line-height-5">C#</li>
-      <li class="line-height-5">C/C++</li>
-      <li class="line-height-5">Linux</li>
+      <li>MATLAB</li>
+      <li>Python</li>
+      <li>C#</li>
+      <li>C/C++</li>
+      <li>Linux</li>
   </ul>
 
 
