--- a/index.html
+++ b/index.html
@@ -97,15 +97,13 @@
 
   <H2>RESEARCH INTERESTS</H2>
   <P class="line-height-19"> I specialize in designing Contactless, Sensorless, and Wireless sensing solutions beyond vision, aiming to 
-    build commercialized sensing applications for a smart and privacy-protected life. My current research interests 
-    include:
+    build commercialized sensing applications for a smart and privacy-protected life. My current research interests include:
   </P>
-
   <ul>
-    <li>Wireless Sensing and Communication</li>
-    <li>Contactless Healthcare and Eldercare</li>
-    <li>Radio-Visual Joint Learning and Sensing</li>
-    <li>Contactless Healthcare and Eldercare</li>
+    <li class="line-height-10">Wireless Sensing and Communication</li>
+    <li class="line-height-10">Contactless Healthcare and Eldercare</li>
+    <li class="line-height-10">Radio-Visual Joint Learning and Sensing</li>
+    <li class="line-height-10">Contactless Healthcare and Eldercare</li>
   </ul>
 
   <H2>WORK EXPERIENCE</H2>
