--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
 
 
   <H2>RESEARCH INTERESTS</H2>
-  <P > I specialize in designing Contactless, Sensorless, and Wireless sensing solutions beyond vision, aiming to 
+  <P> I specialize in designing Contactless, Sensorless, and Wireless sensing solutions beyond vision, aiming to 
     build commercialized sensing applications for a smart and privacy-protected life. My current research interests include:
   </P>
   <ul>
-    <li class="line-height-8">Wireless Sensing and Communication</li>
-    <li class="line-height-8">Contactless Healthcare and Eldercare</li>
-    <li class="line-height-8">Radio-Visual Joint Learning and Sensing</li>
-    <li class="line-height-8">Contactless Healthcare and Eldercare</li>
+    <li>Wireless Sensing and Communication</li>
+    <li>Contactless Healthcare and Eldercare</li>
+    <li>Radio-Visual Joint Learning and Sensing</li>
+    <li>Contactless Healthcare and Eldercare</li>
   </ul>
 
   <H2>WORK EXPERIENCE</H2>
