--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 
   <H2>RESEARCH INTERESTS</H2>
-  <P> I specialize in designing Contactless, Sensorless, and Wireless sensing solutions beyond vision, aiming to 
+  <P  class="line-height-15"> I specialize in designing Contactless, Sensorless, and Wireless sensing solutions beyond vision, aiming to 
     build commercialized sensing applications for a smart and privacy-protected life. My current research interests include:
   </P>
   <ul>
