--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
 
 
   <H2>Github Statistics</Source></H2>
-      <td class="pub_td1"><img src="https://github-readme-stats.vercel.app/api?username=pengzhiliang&show_icons=true&include_all_commits=true&title_color=2c86ea&icon_color=2c86ea&text_color=00c800&bg_color=00000000"></td>
+      <td class="pub_td1"><img src="https://github-readme-stats.vercel.app/api?username=zhongqin-wang&show_icons=true&include_all_commits=true&title_color=2c86ea&icon_color=2c86ea&text_color=00c800&bg_color=00000000"></td>
     
   
   <br> <br> 
