--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -36,11 +36,11 @@
       }
       .left {
           text-align: left;
-          width: 70%;
+          width: 80%;
       }
       .right {
           text-align: right;
-          width: 30%;
+          width: 20%;
       }
   </style>
   <style>
@@ -75,15 +75,14 @@
         <DIV id="toptitle">
         <H1>Dr. Zhonqin Wang &nbsp;</H1></DIV>
         <BR>
-        <BR>
         <BR> Email:  
-        <A class="line-height-15" href="mailto:zhongqin.wang@uts.edu.au"> zhongqin.wang@uts.edu.au</A>; 
+        <A class="line-height-20" href="mailto:zhongqin.wang@uts.edu.au"> zhongqin.wang@uts.edu.au</A>; 
         <BR> Phone: 
-        <A class="line-height-15" href="+61 0416167758"> +61 0416167758</A>;
+        <A class="line-height-20" href="+61 0416167758"> +61 0416167758</A>;
         <BR> Github: 
-        <A class="line-height-15" href="https://github.com/Zhongqin-Wang">https://github.com/Zhongqin-Wang</A>;
+        <A class="line-height-20" href="https://github.com/Zhongqin-Wang">https://github.com/Zhongqin-Wang</A>;
         <BR> Google scholar:
-        <A class="line-height-15" href="https://scholar.google.com/citations?user=F9UMFwIAAAAJ&hl=en">https://scholar.google.com</A>
+        <A class="line-height-20" href="https://scholar.google.com/citations?user=F9UMFwIAAAAJ&hl=en">https://scholar.google.com</A>
         <BR></P>
       </TD>
       <TD>
@@ -96,16 +95,14 @@
 
 
   <H2>RESEARCH INTERESTS</H2>
-  <P class="line-height-15"> I specialize in designing Contactless, Sensorless, and Wireless sensing solutions beyond vision, aiming to 
-    build commercialized sensing applications for a smart and privacy-protected life. My current research interests 
-    include:
+  <P  class="line-height-20"> I specialize in designing Contactless, Sensorless, and Wireless sensing solutions beyond vision, aiming to 
+    build commercialized sensing applications for a smart and privacy-protected life. My current research interests include:
   </P>
-
   <ul>
-    <li class="line-height-5">Wireless Sensing and Communication</li>
-    <li class="line-height-5">Contactless Healthcare and Eldercare</li>
-    <li class="line-height-5">Radio-Visual Joint Learning and Sensing</li>
-    <li class="line-height-5">Contactless Healthcare and Eldercare</li>
+    <li>Wireless Sensing and Communication</li>
+    <li>Contactless Healthcare and Eldercare</li>
+    <li>Radio-Visual Joint Learning and Sensing</li>
+    <li>Contactless Healthcare and Eldercare</li>
   </ul>
 
   <H2>WORK EXPERIENCE</H2>
@@ -113,36 +110,36 @@
     <div class="left"><b>University of Technology Sydney, Australia</b></div>
     <div class="right">Feb. 2024 - Present</div>
   </div>
-  <p class="line-height-15"><i>Research Fellow supervised by Prof. Andrew Zhang</i></p>
+  <p class="line-height-20"><i>Research Fellow supervised by Prof. Andrew Zhang</i></p>
   <ul>
-    <li class="line-height-5">Researching</li>
-    <li class="line-height-5">Master/PhD student supervision</li>
+    <li>Researching</li>
+    <li>Master/PhD student supervision</li>
   </ul>
 
   <div class="container">
     <div class="left"><b>Capital Normal University, Beijing, China</b></div>
     <div class="right">Dec. 2021 - Jan. 2024</div>
   </div>
-  <p class="line-height-15"><i>Lecturer at College of Information and Engineering</i></p>
+  <p class="line-height-20"><i>Lecturer at College of Information and Engineering</i></p>
   <ul>
-    <li class="line-height-5">Researching</li>
-    <li class="line-height-5">Teaching</li>
-    <li class="line-height-5">Master student supervision</li>
+    <li>Researching</li>
+    <li>Teaching</li>
+    <li>Master student supervision</li>
   </ul>
 
   <div class="container">
     <div class="left"><b>University of Technology Sydney, Australia</b></div>
     <div class="right">Sep. 2021 - Jun. 2022</div>
   </div>
-  <p class="line-height-15"><i>Research Associate supervised by Prof. Min Xu</i></p>
+  <p class="line-height-20"><i>Research Associate supervised by Prof. Min Xu</i></p>
   <ul>
-    <li class="line-height-5">Developed an elderly healthcare system using commercial 
+    <li>Developed an elderly healthcare system using commercial 
       off-the-shelf millimeter-wave devices</li>
-    <li class="line-height-15">Led the development of key functionalities, including 
+    <li>Led the development of key functionalities, including 
       moving object tracking, vital signs estimation, fall detection, stationary object localization, and people counting</li>
-    <li class="line-height-5">Designed low-computational cutting-edge algorithms 
+    <li>Designed low-computational cutting-edge algorithms 
       to enhance the real-time performance of the system</li>
-    <li class="line-height-5">Provided valuable mentorship and guidance to Ph.D. 
+    <li>Provided valuable mentorship and guidance to Ph.D. 
       students</li>
   </ul>
 
@@ -150,23 +147,23 @@
     <div class="left"><b>University of Technology Sydney, Australia</b></div>
     <div class="right">Jan. 2021 – Jun. 2021</div>
   </div>
-  <p class="line-height-15"><i>Research Engineer supervised by Prof. Andrew Zhang</i></p>
+  <p class="line-height-20"><i>Research Engineer supervised by Prof. Andrew Zhang</i></p>
   <ul>
-    <li class="line-height-5">Designed a novel device-free WiFi tracking scheme</li>
-    <li class="line-height-5">Implemented a real-time tracking demonstration system
+    <li>Designed a novel device-free WiFi tracking scheme</li>
+    <li>Implemented a real-time tracking demonstration system
       (Demo video available at: 
       <A href="https://youtu.be/oIPGrRmY-uc">https://youtu.be/oIPGrRmY-uc</A>)</li>
-    <li class="line-height-5">Published the research outcome in an A* top journal</li>
+    <li>Published the research outcome in an A* top journal</li>
   </ul>
 
   <div class="container">
     <div class="left"><b>University of Technology Sydney, Australia</b></div>
     <div class="right">Jul. 2020 – Dec. 2020</div>
   </div>
-  <p class="line-height-15"><i>Research Assistant supervised by Prof. Andrew Zhang</i></p>
+  <p class="line-height-20"><i>Research Assistant supervised by Prof. Andrew Zhang</i></p>
   <ul>
-    <li class="line-height-5">Established a WiFi hardware platform for data collection </li>
-    <li class="line-height-5">Reproduced and evaluated previous research works on 
+    <li>Established a WiFi hardware platform for data collection </li>
+    <li>Reproduced and evaluated previous research works on 
       passive human tracking using WiFi signals</li>
   </ul>
 
@@ -177,27 +174,27 @@
     <div class="left"><b>University of Technology Sydney, Australia</b></div>
     <div class="right">Jan. 2017 – Dec. 2020</div>
   </div>
-  <p class="line-height-17">School of Electrical and Data Engineering</p>
-  <p class="line-height-1"><i>Ph.D. in Engineering supervised by Prof. Min Xu</i></p>
-  <p class="line-height-13">Thesis: Computer Vision-assisted Battery-free RFID 
+  <p class="line-height-20">School of Electrical and Data Engineering</p>
+  <p class="line-height-2"><i>Ph.D. in Engineering supervised by Prof. Min Xu</i></p>
+  <p class="line-height-20">Thesis: Computer Vision-assisted Battery-free RFID 
     Systems for Object Recognition, Localization and Orientation</p>
 
   <div class="container">
     <div class="left"><b>Nanjing University of Posts and Telecommunications, China</b></div>
     <div class="right">Sep. 2015 – Jun. 2020</div>
   </div>
-  <p class="line-height-17">School of Internet of Things</p>
-  <p class="line-height-1"><i>Ph.D. in Information Network supervised by Prof. Guoliang Chen</i></p>
-  <p class="line-height-13">Thesis: Research on Object Position Sensing and Multi-Tag Mutual 
+  <p class="line-height-20">School of Internet of Things</p>
+  <p class="line-height-2"><i>Ph.D. in Information Network supervised by Prof. Guoliang Chen</i></p>
+  <p class="line-height-20">Thesis: Research on Object Position Sensing and Multi-Tag Mutual 
     Coupling Suppression in Battery-free RFID</p>
 
   <div class="container">
     <div class="left"><b>University of Technology Sydney, Australia</b></div>
     <div class="right">Sep. 2011 – Mar. 2014</div>
   </div>
-  <p class="line-height-17">Nanjing University of Posts and Telecommunications, China</p>
-  <p class="line-height-1"><i>School of Computer Science and Technology</i></p>
-  <p class="line-height-13">M.S. in Computer Software and Theory supervised by Prof. Ning Ye</p>
+  <p class="line-height-20">Nanjing University of Posts and Telecommunications, China</p>
+  <p class="line-height-2"><i>School of Computer Science and Technology</i></p>
+  <p class="line-height-20">M.S. in Computer Software and Theory supervised by Prof. Ning Ye</p>
 
   <H2>PUBLICATIONS</H2>
   <table class="pub_table">
@@ -520,38 +517,40 @@
 
   <H2>PROFESSIONAL SERVICES</H2>
   <ul>
-    <li class="line-height-5">TPC Member, Workshop on Integrated Sensing and 
+    <li>TPC Member, Workshop on Integrated Sensing and 
       Communication at IEEE ICC, 2023</li>
-    <li class="line-height-5">Guest Editor, Special Issue "Precise Indoor 
+    <li>Guest Editor, Special Issue "Precise Indoor 
       Positioning and Navigation" of Applied Sciences, 2022</li>
-    <li class="line-height-5">Reviewer, IEEE Journal of Selected Topics in Signal Processing, 2021</li>
-    <li class="line-height-5">Reviewer, IJCAI-PRICAI, 2020</li>
-    <li class="line-height-5">Reviewer, IEEE Access</li>
-    <li class="line-height-5">Reviewer, IET Communications</li>
-    <li class="line-height-5">Reviewer, Measurements</li>
+    <li>Reviewer, IEEE Journal of Selected Topics in Signal Processing, 2021</li>
+    <li>Reviewer, IJCAI-PRICAI, 2020</li>
+    <li>Reviewer, IEEE Access</li>
+    <li>Reviewer, IET Communications</li>
+    <li>Reviewer, Measurements</li>
   </ul>
 
 
   <H2>AWARDS & HONORS</H2>
   <ul>
-    <li class="line-height-5">Winner, The "Chunhui Cup" Chinese Oversea Students Innovation and Entrepreneurship Competition, 2022</li>
-    <li class="line-height-5">UTS President’s Scholarship, 2017</li>
-    <li class="line-height-5">National Scholarship for Doctoral Students, 2017</li>
-    <li class="line-height-15">First Prize, the 2nd National College “3S” (Smart, Service and System) Competition on Internet of Things Technology and Applications, 2016</li>
-    <li class="line-height-5">National Scholarship for Graduate Students, 2013</li>
-    <li class="line-height-5">National Scholarship for Undergraduate Students, 2009</li>
+    <li>Winner, The "Chunhui Cup" Chinese Oversea Students Innovation and Entrepreneurship Competition, 2022</li>
+    <li>UTS President’s Scholarship, 2017</li>
+    <li>National Scholarship for Doctoral Students, 2017</li>
+    <li>First Prize, the 2nd National College “3S” (Smart, Service and System) Competition on Internet of Things Technology and Applications, 2016</li>
+    <li>National Scholarship for Graduate Students, 2013</li>
+    <li>National Scholarship for Undergraduate Students, 2009</li>
   </ul>
 
 
   <H2>PROGRAMMING SKILLS</H2>
   <ul>
-      <li class="line-height-5">MATLAB</li>
-      <li class="line-height-5">Python</li>
-      <li class="line-height-5">C#</li>
-      <li class="line-height-5">C/C++</li>
-      <li class="line-height-5">Linux</li>
+      <li>MATLAB</li>
+      <li>Python</li>
+      <li>C#</li>
+      <li>C/C++</li>
+      <li>Linux</li>
   </ul>
-
+  
+  <H2>Visitor Statistics</H2>
+  <script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=50dd3mhbn80&amp;m=0&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33" async="async"></script>
 
 </BODY>
 </HTML>
