--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -208,6 +208,7 @@
          information (CSI) collected from commercial-off-the-shelf (COTS) WiFi devices. 
          We consider the typical system setup including a transmitter with a single antenna and a receiver with three antennas.
         <br>
+        [<a href="https://openaccess.thecvf.com/content/ICCV2021/html/Peng_Conformer_Local_Features_Coupling_Global_Representations_for_Visual_Recognition_ICCV_2021_paper.html">Paper</a>]
         <ul>
           <li class="line-height-10">Demo:<A href="https://www.youtube.com/watch?v=UvceJ2OnJmE&t=73s"> https://www.youtube.com/watch?v=UvceJ2OnJmE&t=73s</A>;</li>
         </ul>
@@ -234,6 +235,7 @@
         monitoring vital signs, which can perform consistently well in dynamic scenarios, 
         e.g., when some people move around the subject to be tracked, or a subject waves his/her arms and marches on the spot. 
         <br>
+        [<a href="https://openaccess.thecvf.com/content/ICCV2021/html/Peng_Conformer_Local_Features_Coupling_Global_Representations_for_Visual_Recognition_ICCV_2021_paper.html">Paper</a>]
       </td>
     </tr>
 
@@ -247,6 +249,7 @@
         impact of mutual coupling on a tag’s signal fingerprint and develop novel RSSI/phase-distance models.  We then 
         develop new experimental methods and signal processing techniques to verify the effectiveness of the proposed models. 
         <br>
+        [<a href="https://openaccess.thecvf.com/content/ICCV2021/html/Peng_Conformer_Local_Features_Coupling_Global_Representations_for_Visual_Recognition_ICCV_2021_paper.html">Paper</a>]
       </td>
     </tr>
 
