--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -357,9 +357,7 @@
         move along a known track with constant speed, we only need to locate the tag's initial position. 
         <br>
         [<a href="https://www.sciencedirect.com/science/article/abs/pii/S1570870516302736">Paper</a>]
-        <ul>
-          <li class="line-height-10">Demo:<A href="https://www.youtube.com/watch?v=iz98y3m6A64"> https://www.youtube.com/watch?v=iz98y3m6A64</A>;</li>
-        </ul>
+        [<a href="https://www.youtube.com/watch?v=iz98y3m6A64">Demo</a>]
       </td>
     </tr>
 
@@ -375,9 +373,7 @@
         tracked tag before and after human motion, which can accurately distinguish absence or presence of tag motion.
         <br>
         [<a href="https://www.eejournal.ktu.lt/index.php/elt/article/view/14603">Paper</a>]
-        <ul>
-          <li class="line-height-10">Demo:<A href="https://www.youtube.com/watch?v=a2M32Vg66Kc"> https://www.youtube.com/watch?v=a2M32Vg66Kc</A>;</li>
-        </ul>
+        [<a href="https://www.youtube.com/watch?v=a2M32Vg66Kc">Demo</a>]
       </td>
     </tr>
 
