--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -209,7 +209,7 @@
          We consider the typical system setup including a transmitter with a single antenna and a receiver with three antennas.
         <br>
         [<a href="https://ieeexplore.ieee.org/abstract/document/9679386">Paper</a>]
-        [<a href="https://www.youtube.com/watch?v=UvceJ2OnJmE&t=73s">Demo</a>]
+        [<a href="https://youtu.be/UvceJ2OnJmE&t=73s">Demo</a>]
       </td>
     </tr>
 
@@ -357,7 +357,7 @@
         move along a known track with constant speed, we only need to locate the tag's initial position. 
         <br>
         [<a href="https://www.sciencedirect.com/science/article/abs/pii/S1570870516302736">Paper</a>]
-        [<a href="https://www.youtube.com/watch?v=iz98y3m6A64">Demo</a>]
+        [<a href="https://youtu.be/iz98y3m6A64">Demo</a>]
       </td>
     </tr>
 
@@ -373,7 +373,7 @@
         tracked tag before and after human motion, which can accurately distinguish absence or presence of tag motion.
         <br>
         [<a href="https://www.eejournal.ktu.lt/index.php/elt/article/view/14603">Paper</a>]
-        [<a href="https://www.youtube.com/watch?v=a2M32Vg66Kc">Demo</a>]
+        [<a href="https://youtu.be/a2M32Vg66Kc">Demo</a>]
       </td>
     </tr>
 
@@ -456,7 +456,7 @@
         environmental noise and user variations. 
         <br>
         <ul>
-          <li class="line-height-10">Full demo:<A href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;</li>
+          <li class="line-height-10">Full demo:<A href="https://youtu.be/jX9EhDu_KtQ"> https://youtu.be/jX9EhDu_KtQ</A>;</li>
         </ul>
       </td>
     </tr>
@@ -471,7 +471,7 @@
         and a three-antenna receiver.
         <br>
         <ul>
-          <li class="line-height-10">Full demo:<A href="https://www.youtube.com/watch?v=UvceJ2OnJmE&t=73s"> https://www.youtube.com/watch?v=UvceJ2OnJmE&t=73s</A>;</li>
+          <li class="line-height-10">Full demo:<A href="https://youtu.be/UvceJ2OnJmE&t=73s"> https://youtu.be/UvceJ2OnJmE&t=73s</A>;</li>
         </ul>
       </td>
     </tr>
@@ -484,7 +484,7 @@
         <br>Detect whether objects with RFID tags are moved in the monitoring area with human activities.
         <br>
         <ul>
-          <li class="line-height-10">Full demo:<A href="https://www.youtube.com/watch?v=a2M32Vg66Kc"> https://www.youtube.com/watch?v=a2M32Vg66Kc</A>;</li>
+          <li class="line-height-10">Full demo:<A href="https://youtu.be/a2M32Vg66Kc"> https://youtu.be/a2M32Vg66Kc</A>;</li>
         </ul>
       </td>
     </tr>
@@ -497,7 +497,7 @@
         <br>The PDoA phase difference is used to realize the track tracking of passive RFID tags.
         <br>
         <ul>
-          <li class="line-height-10">Full demo:<A href="https://www.youtube.com/watch?v=iz98y3m6A64"> https://www.youtube.com/watch?v=iz98y3m6A64</A>;</li>
+          <li class="line-height-10">Full demo:<A href="https://youtu.be/iz98y3m6A64"> https://youtu.be/iz98y3m6A64</A>;</li>
         </ul>
       </td>
     </tr>
