--- a/index.html
+++ b/index.html
@@ -208,9 +208,8 @@
          information (CSI) collected from commercial-off-the-shelf (COTS) WiFi devices. 
          We consider the typical system setup including a transmitter with a single antenna and a receiver with three antennas.
         <br>
-        <ul>
-          <li class="line-height-10">Demo:<A href="https://www.youtube.com/watch?v=UvceJ2OnJmE&t=73s"> https://www.youtube.com/watch?v=UvceJ2OnJmE&t=73s</A>;</li>
-        </ul>
+        [<a href="https://ieeexplore.ieee.org/abstract/document/9679386">Paper</a>]
+        [<a href="https://youtu.be/UvceJ2OnJmE&t=73s">Demo</a>]
       </td>
     </tr>
 
@@ -222,6 +221,7 @@
         <br>This paper introduces the development of a real-time uplink sensing demonstrator for PMN, 
         enabling sub-meter precision tracking in indoor environments. 
         <br>
+        [<a href="https://ieeexplore.ieee.org/abstract/document/10376089">Paper</a>]
       </td>
     </tr>
 
@@ -234,6 +234,7 @@
         monitoring vital signs, which can perform consistently well in dynamic scenarios, 
         e.g., when some people move around the subject to be tracked, or a subject waves his/her arms and marches on the spot. 
         <br>
+        [<a href="https://ieeexplore.ieee.org/abstract/document/10160149">Paper</a>]
       </td>
     </tr>
 
@@ -247,6 +248,7 @@
         impact of mutual coupling on a tag’s signal fingerprint and develop novel RSSI/phase-distance models.  We then 
         develop new experimental methods and signal processing techniques to verify the effectiveness of the proposed models. 
         <br>
+        [<a href="https://ieeexplore.ieee.org/abstract/document/9761169">Paper</a>]
       </td>
     </tr>
 
@@ -258,6 +260,7 @@
         <br>In this article, we present RF-MVO that fuses RFID and computer vision for stationary RFID localization 
         in 3D space by attaching a light-weight 2D monocular camera to two reader antennas in parallel.
         <br>
+        [<a href="https://ieeexplore.ieee.org/abstract/document/8908665">Paper</a>]
       </td>
     </tr>
 
@@ -271,6 +274,7 @@
         modulation factor of each tag in the two-element tag array, which can be estimated to compensate for the 
         distortion in RFID fingerprints.
         <br>
+        [<a href="https://ieeexplore.ieee.org/abstract/document/9546442">Paper</a>]
       </td>
     </tr>
 
@@ -283,6 +287,7 @@
         labeled RFID system. The system would output the accurate difference in tag-to-antenna distances between 
         two tags, which is a fundamental parameter in previous works for use.
         <br>
+        [<a href="https://ieeexplore.ieee.org/abstract/document/9158443">Paper</a>]
       </td>
     </tr>
 
@@ -295,6 +300,7 @@
         <br> In this paper, we propose a comprehensive solution, called RF-Focus, which fuses RFID and computer vision (CV) 
         techniques to recognize and locate moving RFID-tagged objects within ROI. 
         <br>
+        [<a href="https://dl.acm.org/doi/abs/10.1145/3314416">Paper</a>]
       </td>
     </tr>
 
@@ -307,6 +313,7 @@
         RFID tags in a 3D space and recover an unknown trajectory of reader antennas binding with a 2D monocular camera. 
         The proposed hybrid system exhibits three unique features.
         <br>
+        [<a href="https://ieeexplore.ieee.org/abstract/document/8416322">Paper</a>]
       </td>
     </tr>
 
@@ -320,6 +327,7 @@
         are sensitive to external interference, the RFID tag could be regarded as a battery-free sensor that detects 
         reflections off targeted objects. 
         <br>
+        [<a href="https://dl.acm.org/doi/abs/10.1145/3055515">Paper</a>]
       </td>
     </tr>
 
@@ -334,6 +342,7 @@
         calibration of the reader's antenna location and spacing, and 3) enabling fine-grained calculation on the 
         orientation of the tags. All of these advantages ultimately improve the localization/tracking accuracy. 
         <br>
+        [<a href="https://ieeexplore.ieee.org/abstract/document/8106689">Paper</a>]
       </td>
     </tr>
     
@@ -347,9 +356,8 @@
         there is a virtual tag as the same as the tracked one in each grid. On this basis, for the case where the tags 
         move along a known track with constant speed, we only need to locate the tag's initial position. 
         <br>
-        <ul>
-          <li class="line-height-10">Demo:<A href="https://www.youtube.com/watch?v=iz98y3m6A64"> https://www.youtube.com/watch?v=iz98y3m6A64</A>;</li>
-        </ul>
+        [<a href="https://www.sciencedirect.com/science/article/abs/pii/S1570870516302736">Paper</a>]
+        [<a href="https://youtu.be/iz98y3m6A64">Demo</a>]
       </td>
     </tr>
 
@@ -364,9 +372,8 @@
         Next, we divide the surveillance region into mm-level grids to construct similarity matrixes of the 
         tracked tag before and after human motion, which can accurately distinguish absence or presence of tag motion.
         <br>
-        <ul>
-          <li class="line-height-10">Demo:<A href="https://www.youtube.com/watch?v=a2M32Vg66Kc"> https://www.youtube.com/watch?v=a2M32Vg66Kc</A>;</li>
-        </ul>
+        [<a href="https://www.eejournal.ktu.lt/index.php/elt/article/view/14603">Paper</a>]
+        [<a href="https://youtu.be/a2M32Vg66Kc">Demo</a>]
       </td>
     </tr>
 
@@ -449,7 +456,7 @@
         environmental noise and user variations. 
         <br>
         <ul>
-          <li class="line-height-10">Full demo:<A href="https://www.youtube.com/watch?v=jX9EhDu_KtQ"> https://www.youtube.com/watch?v=jX9EhDu_KtQ</A>;</li>
+          <li class="line-height-10">Full demo:<A href="https://youtu.be/jX9EhDu_KtQ"> https://youtu.be/jX9EhDu_KtQ</A>;</li>
         </ul>
       </td>
     </tr>
@@ -464,7 +471,7 @@
         and a three-antenna receiver.
         <br>
         <ul>
-          <li class="line-height-10">Full demo:<A href="https://www.youtube.com/watch?v=UvceJ2OnJmE&t=73s"> https://www.youtube.com/watch?v=UvceJ2OnJmE&t=73s</A>;</li>
+          <li class="line-height-10">Full demo:<A href="https://youtu.be/UvceJ2OnJmE&t=73s"> https://youtu.be/UvceJ2OnJmE&t=73s</A>;</li>
         </ul>
       </td>
     </tr>
@@ -477,7 +484,7 @@
         <br>Detect whether objects with RFID tags are moved in the monitoring area with human activities.
         <br>
         <ul>
-          <li class="line-height-10">Full demo:<A href="https://www.youtube.com/watch?v=a2M32Vg66Kc"> https://www.youtube.com/watch?v=a2M32Vg66Kc</A>;</li>
+          <li class="line-height-10">Full demo:<A href="https://youtu.be/a2M32Vg66Kc"> https://youtu.be/a2M32Vg66Kc</A>;</li>
         </ul>
       </td>
     </tr>
@@ -490,7 +497,7 @@
         <br>The PDoA phase difference is used to realize the track tracking of passive RFID tags.
         <br>
         <ul>
-          <li class="line-height-10">Full demo:<A href="https://www.youtube.com/watch?v=iz98y3m6A64"> https://www.youtube.com/watch?v=iz98y3m6A64</A>;</li>
+          <li class="line-height-10">Full demo:<A href="https://youtu.be/iz98y3m6A64"> https://youtu.be/iz98y3m6A64</A>;</li>
         </ul>
       </td>
     </tr>
