--- a/zhongqin-wang.htm
+++ b/zhongqin-wang.htm
@@ -201,6 +201,7 @@
     <tr>
       <td class="pub_td1"><img src="./PaperFig/1.png" class="papericon" width="300"></td>
       <td class="pub_td2">
+        <!--
         <b>[1]Single-Target Real-Time Passive WiFi Tracking</b>
         <br>
         <br>In this work, we present a scheme named WiFi Doppler Frequency Shift (WiDFS),
@@ -208,6 +209,10 @@
          information (CSI) collected from commercial-off-the-shelf (COTS) WiFi devices. 
          We consider the typical system setup including a transmitter with a single antenna and a receiver with three antennas.
         <br>
+        -->
+        <p>[1] <b>Zhongqin Wang</b>, J. Andrew Zhang, Min Xu and Y. Jay Guo. Single-Target 
+          Real-Time Passive WiFi Tracking, <i>IEEE Transactions on Mobile Computing</i>, vol.22, 
+          no. 6, pp. 3724-3742, 2023. <i>(CORE A*, JCR Q1, IF: 6.075)</i></p>
         [<a href="https://ieeexplore.ieee.org/abstract/document/9679386">Paper</a>]
         [<a href="https://youtu.be/UvceJ2OnJmE&t=73s">Demo</a>]
       </td>
